// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer expands from bottom 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-drawer pf-m-expanded pf-m-panel-bottom"
  >
    <div
      class="pf-v6-c-drawer__main"
    >
      <div
        class="pf-v6-c-drawer__content"
      >
        <div
          class="pf-v6-c-drawer__body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium est a porttitor vehicula. Quisque vel commodo urna. Morbi mattis rutrum ante, id vehicula ex accumsan ut. Morbi viverra, eros vel porttitor facilisis, eros purus aliquet erat,nec lobortis felis elit pulvinar sem. Vivamus vulputate, risus eget commodo eleifend, eros nibh porta quam, vitae lacinia leo libero at magna. Maecenas aliquam sagittis orci, et posuere nisi ultrices sit amet. Aliquam ex odio, malesuada sed posuere quis, pellentesque at mauris. Phasellus venenatis massa ex, eget pulvinar libero auctor pretium. Aliquam erat volutpat. Duis euismod justo in quam ullamcorper, in commodo massa vulputate.
        </div>
      </div>
      <div
        class="pf-v6-c-drawer__panel"
        id="pf-drawer-panel-:r8:"
      >
        <div
          class="pf-v6-c-drawer__head"
        >
          <span>
            drawer-panel
          </span>
          <div
            class="pf-v6-c-drawer__actions"
          >
            <div
              class="pf-v6-c-drawer__close"
            >
              <button
                aria-label="Close drawer panel"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r9:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 20 20"
                    width="1em"
                  >
                    <path
                      d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-drawer__body"
        >
          drawer-panel
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Drawer has resizable callback and id 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-drawer pf-m-expanded pf-m-panel-left"
  >
    <div
      class="pf-v6-c-drawer__main"
    >
      <div
        class="pf-v6-c-drawer__content"
      >
        <div
          class="pf-v6-c-drawer__body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium est a porttitor vehicula. Quisque vel commodo urna. Morbi mattis rutrum ante, id vehicula ex accumsan ut. Morbi viverra, eros vel porttitor facilisis, eros purus aliquet erat,nec lobortis felis elit pulvinar sem. Vivamus vulputate, risus eget commodo eleifend, eros nibh porta quam, vitae lacinia leo libero at magna. Maecenas aliquam sagittis orci, et posuere nisi ultrices sit amet. Aliquam ex odio, malesuada sed posuere quis, pellentesque at mauris. Phasellus venenatis massa ex, eget pulvinar libero auctor pretium. Aliquam erat volutpat. Duis euismod justo in quam ullamcorper, in commodo massa vulputate.
        </div>
      </div>
      <div
        class="pf-v6-c-drawer__panel pf-m-resizable"
        id="test-id"
      >
        <div
          aria-controls="test-id"
          aria-label="Resize"
          aria-orientation="vertical"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-drawer__splitter pf-m-vertical"
          role="separator"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            class="pf-v6-c-drawer__splitter-handle"
          />
        </div>
        <div
          class="pf-v6-c-drawer__panel-main"
        >
          <div
            class="pf-v6-c-drawer__head"
          >
            <span>
              drawer-panel
            </span>
            <div
              class="pf-v6-c-drawer__actions"
            >
              <div
                class="pf-v6-c-drawer__close"
              >
                <button
                  aria-label="Close drawer panel"
                  class="pf-v6-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:rd:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="pf-v6-c-drawer__body"
          >
            drawer-panel
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Drawer has resizable css and color variants 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-drawer pf-m-expanded pf-m-panel-left"
  >
    <div
      class="pf-v6-c-drawer__main"
    >
      <div
        class="pf-v6-c-drawer__content"
      >
        <div
          class="pf-v6-c-drawer__body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium est a porttitor vehicula. Quisque vel commodo urna. Morbi mattis rutrum ante, id vehicula ex accumsan ut. Morbi viverra, eros vel porttitor facilisis, eros purus aliquet erat,nec lobortis felis elit pulvinar sem. Vivamus vulputate, risus eget commodo eleifend, eros nibh porta quam, vitae lacinia leo libero at magna. Maecenas aliquam sagittis orci, et posuere nisi ultrices sit amet. Aliquam ex odio, malesuada sed posuere quis, pellentesque at mauris. Phasellus venenatis massa ex, eget pulvinar libero auctor pretium. Aliquam erat volutpat. Duis euismod justo in quam ullamcorper, in commodo massa vulputate.
        </div>
      </div>
      <div
        class="pf-v6-c-drawer__panel pf-m-resizable pf-m-secondary"
        id="pf-drawer-panel-:ra:"
        style="--pf-v6-c-drawer__panel--md--FlexBasis: 300px; --pf-v6-c-drawer__panel--md--FlexBasis--min: 200px; --pf-v6-c-drawer__panel--md--FlexBasis--max: 400px;"
      >
        <div
          aria-controls="pf-drawer-panel-:ra:"
          aria-label="Resize"
          aria-orientation="vertical"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-drawer__splitter pf-m-vertical"
          role="separator"
          tabindex="0"
        >
          <div
            aria-hidden="true"
            class="pf-v6-c-drawer__splitter-handle"
          />
        </div>
        <div
          class="pf-v6-c-drawer__panel-main"
        >
          <div
            class="pf-v6-c-drawer__head"
          >
            <span>
              drawer-panel
            </span>
            <div
              class="pf-v6-c-drawer__actions"
            >
              <div
                class="pf-v6-c-drawer__close"
              >
                <button
                  aria-label="Close drawer panel"
                  class="pf-v6-c-button pf-m-plain"
                  data-ouia-component-id="OUIA-Generated-Button-plain-:rb:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-v6-svg"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      viewBox="0 0 20 20"
                      width="1em"
                    >
                      <path
                        d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="pf-v6-c-drawer__body"
          >
            drawer-panel
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Drawer isExpanded = false and isInline = false and isStatic = false 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-drawer"
  >
    <div
      class="pf-v6-c-drawer__main"
    >
      <div
        class="pf-v6-c-drawer__content"
      >
        <div
          class="pf-v6-c-drawer__body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium est a porttitor vehicula. Quisque vel commodo urna. Morbi mattis rutrum ante, id vehicula ex accumsan ut. Morbi viverra, eros vel porttitor facilisis, eros purus aliquet erat,nec lobortis felis elit pulvinar sem. Vivamus vulputate, risus eget commodo eleifend, eros nibh porta quam, vitae lacinia leo libero at magna. Maecenas aliquam sagittis orci, et posuere nisi ultrices sit amet. Aliquam ex odio, malesuada sed posuere quis, pellentesque at mauris. Phasellus venenatis massa ex, eget pulvinar libero auctor pretium. Aliquam erat volutpat. Duis euismod justo in quam ullamcorper, in commodo massa vulputate.
        </div>
      </div>
      <div
        class="pf-v6-c-drawer__panel"
        hidden=""
        id="pf-drawer-panel-:r2:"
        inert=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Drawer isExpanded = false and isInline = true and isStatic = false 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-drawer"
  >
    <div
      class="pf-v6-c-drawer__main"
    >
      <div
        class="pf-v6-c-drawer__content"
      >
        <div
          class="pf-v6-c-drawer__body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium est a porttitor vehicula. Quisque vel commodo urna. Morbi mattis rutrum ante, id vehicula ex accumsan ut. Morbi viverra, eros vel porttitor facilisis, eros purus aliquet erat,nec lobortis felis elit pulvinar sem. Vivamus vulputate, risus eget commodo eleifend, eros nibh porta quam, vitae lacinia leo libero at magna. Maecenas aliquam sagittis orci, et posuere nisi ultrices sit amet. Aliquam ex odio, malesuada sed posuere quis, pellentesque at mauris. Phasellus venenatis massa ex, eget pulvinar libero auctor pretium. Aliquam erat volutpat. Duis euismod justo in quam ullamcorper, in commodo massa vulputate.
        </div>
      </div>
      <div
        class="pf-v6-c-drawer__panel"
        hidden=""
        id="pf-drawer-panel-:r5:"
        inert=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Drawer isExpanded = true and isInline = false and isStatic = false 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-drawer pf-m-expanded"
  >
    <div
      class="pf-v6-c-drawer__main"
    >
      <div
        class="pf-v6-c-drawer__content"
      >
        <div
          class="pf-v6-c-drawer__body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium est a porttitor vehicula. Quisque vel commodo urna. Morbi mattis rutrum ante, id vehicula ex accumsan ut. Morbi viverra, eros vel porttitor facilisis, eros purus aliquet erat,nec lobortis felis elit pulvinar sem. Vivamus vulputate, risus eget commodo eleifend, eros nibh porta quam, vitae lacinia leo libero at magna. Maecenas aliquam sagittis orci, et posuere nisi ultrices sit amet. Aliquam ex odio, malesuada sed posuere quis, pellentesque at mauris. Phasellus venenatis massa ex, eget pulvinar libero auctor pretium. Aliquam erat volutpat. Duis euismod justo in quam ullamcorper, in commodo massa vulputate.
        </div>
      </div>
      <div
        class="pf-v6-c-drawer__panel"
        id="pf-drawer-panel-:r0:"
      >
        <div
          class="pf-v6-c-drawer__head"
        >
          <span>
            drawer-panel
          </span>
          <div
            class="pf-v6-c-drawer__actions"
          >
            <div
              class="pf-v6-c-drawer__close"
            >
              <button
                aria-label="Close drawer panel"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r1:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 20 20"
                    width="1em"
                  >
                    <path
                      d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-drawer__body"
        >
          drawer-panel
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Drawer isExpanded = true and isInline = false and isStatic = true 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-drawer pf-m-expanded"
  >
    <div
      class="pf-v6-c-drawer__main"
    >
      <div
        class="pf-v6-c-drawer__content"
      >
        <div
          class="pf-v6-c-drawer__body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium est a porttitor vehicula. Quisque vel commodo urna. Morbi mattis rutrum ante, id vehicula ex accumsan ut. Morbi viverra, eros vel porttitor facilisis, eros purus aliquet erat,nec lobortis felis elit pulvinar sem. Vivamus vulputate, risus eget commodo eleifend, eros nibh porta quam, vitae lacinia leo libero at magna. Maecenas aliquam sagittis orci, et posuere nisi ultrices sit amet. Aliquam ex odio, malesuada sed posuere quis, pellentesque at mauris. Phasellus venenatis massa ex, eget pulvinar libero auctor pretium. Aliquam erat volutpat. Duis euismod justo in quam ullamcorper, in commodo massa vulputate.
        </div>
      </div>
      <div
        class="pf-v6-c-drawer__panel"
        id="pf-drawer-panel-:r6:"
      >
        <div
          class="pf-v6-c-drawer__head"
        >
          <span>
            drawer-panel
          </span>
          <div
            class="pf-v6-c-drawer__actions"
          >
            <div
              class="pf-v6-c-drawer__close"
            >
              <button
                aria-label="Close drawer panel"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r7:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 20 20"
                    width="1em"
                  >
                    <path
                      d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-drawer__body"
        >
          drawer-panel
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Drawer isExpanded = true and isInline = true and isStatic = false 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-drawer pf-m-expanded"
  >
    <div
      class="pf-v6-c-drawer__main"
    >
      <div
        class="pf-v6-c-drawer__content"
      >
        <div
          class="pf-v6-c-drawer__body"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus pretium est a porttitor vehicula. Quisque vel commodo urna. Morbi mattis rutrum ante, id vehicula ex accumsan ut. Morbi viverra, eros vel porttitor facilisis, eros purus aliquet erat,nec lobortis felis elit pulvinar sem. Vivamus vulputate, risus eget commodo eleifend, eros nibh porta quam, vitae lacinia leo libero at magna. Maecenas aliquam sagittis orci, et posuere nisi ultrices sit amet. Aliquam ex odio, malesuada sed posuere quis, pellentesque at mauris. Phasellus venenatis massa ex, eget pulvinar libero auctor pretium. Aliquam erat volutpat. Duis euismod justo in quam ullamcorper, in commodo massa vulputate.
        </div>
      </div>
      <div
        class="pf-v6-c-drawer__panel"
        id="pf-drawer-panel-:r3:"
      >
        <div
          class="pf-v6-c-drawer__head"
        >
          <span>
            drawer-panel
          </span>
          <div
            class="pf-v6-c-drawer__actions"
          >
            <div
              class="pf-v6-c-drawer__close"
            >
              <button
                aria-label="Close drawer panel"
                class="pf-v6-c-button pf-m-plain"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r4:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 20 20"
                    width="1em"
                  >
                    <path
                      d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-drawer__body"
        >
          drawer-panel
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
